# sam_common

./: CMakeLists.txt  README.md  package.xml  release_packages.yaml  sam_common.rosinstall
.github/workflows/: main.yml  release.yml
cm_station_description/: CMakeLists.txt  package.xml
cm_station_description/mesh/: cylinder.dae  nachosthickness.dae
cm_station_description/robots/: cm_station_default.urdf.xacro
cm_station_description/urdf/: cm_station.urdf.xacro
floatsam_description/: CMakeLists.txt  package.xml
floatsam_description/launch/: floatsam_description.launch
floatsam_description/robots/: floatsam_usv_default.urdf.xacro
floatsam_description/urdf/: floatsam_usv.urdf.xacro
msg/: BallastAngles.msg  PercentStamped.msg
sam_actions/: CHANGELOG.rst  CMakeLists.txt  package.xml
sam_actions/scripts/: gps_fix_server.py
sam_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
sam_description/launch/: sam_description.launch
sam_description/mesh/: SAM_BACKPROP.dae  SAM_FRONTPROP.dae  SAM_HULL.dae
sam_description/robots/: sam_auv_default.urdf.xacro  sam_auv_external.urdf.xacro
sam_description/urdf/: sam_auv.urdf.xacro  sam_auv_base.urdf.xacro  sam_auv_external.urdf.xacro
sam_dynamics/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sam_dynamics/notebooks/: dynamics.ipynb  test.ipynb
sam_dynamics/src/: decision.npy  dynamics.py  fossen.py
sam_joy_controllers/: LICENSE  readme.md  smarc_joy.rosinstall
sam_joy_controllers/sam_joy_controllers/sam_joy_ds5/: 70-ps5-controller.rules  99-sony-dualsense.rules  readme.md
sam_joy_controllers/sam_joy_controllers/sam_joy_ds5/ds5_msgs/: package.xml
sam_joy_controllers/sam_joy_controllers/sam_joy_ds5/ds5_msgs/msg/: SetColour.msg
sam_joy_controllers/sam_joy_controllers/sam_joy_ds5/sam_ds5/: CMakeLists.txt  package.xml
sam_joy_controllers/sam_joy_controllers/sam_joy_ds5/sam_ds5/src/: ds5_ros_node.py  ds5_teleop.py
sam_joy_controllers/sam_joy_controllers/sam_joy_xbox/sam_joy_xbox/: CMakeLists.txt  package.xml
sam_joy_controllers/sam_joy_controllers/sam_joy_xbox/sam_joy_xbox/launch/: joy.launch
sam_joy_controllers/sam_joy_controllers/sam_joy_xbox/sam_joy_xbox/src/: controller.py
sam_joy_controllers/sam_joy_controllers/smarc_joy_ds5/ds5_msgs/: CMakeLists.txt  package.xml
sam_joy_controllers/sam_joy_controllers/smarc_joy_ds5/ds5_msgs/msg/: JoyButtons.msg  SetMotor.msg
sam_joy_controllers/sam_joy_controllers/smarc_joy_ds5/sam_ds5/launch/: sam_ds5.launch
sam_joy_controllers/sam_joy_controllers/smarc_joy_xbox/: readme.md
sam_joy_controllers/sam_joy_controllers/smarc_joy_xbox/smarc_joy_xbox/launch/: joy.launch
sam_joy_controllers/sam_joy_controllers/smarc_joy_xbox/smarc_joy_xbox/src/: controller.py
sam_joy_controllers/sam_joy_msgs/: CMakeLists.txt  package.xml
sam_joy_controllers/sam_joy_msgs/msg/: JoyButtons.msg
sam_joy_controllers/sam_joy_teleop/: CMakeLists.txt  package.xml
sam_joy_controllers/sam_joy_teleop/src/: teleop_node.py
sam_joystick/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sam_joystick/launch/: sam_joystick.launch
sam_joystick/scripts/: joystick_to_sam_setpoints.py
sam_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  sam_msgsConfig.cmake.in  sam_msgsConfigVersion.cmake.in
sam_msgs/action/: GetGPSFix.action  SystemsCheck.action
sam_msgs/msg/: ArrayCommand.msg  CTP.msg  CircuitStatusStamped.msg  CircuitStatusStampedArray.msg  Command.msg  ConsumedCharge.msg  ConsumedChargeArray.msg  ConsumedChargeFeedback.msg  Leak.msg  LightCommand.msg  LightCommandArray.msg  ThrusterAngles.msg  ThrusterRPMs.msg  UavcanNodeStatusNamed.msg  UavcanNodeStatusNamedArray.msg
sam_msgs/srv/: UavcanUpdateBattery.srv
sam_test_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
sam_test_tools/launch/: test_visual.launch
sam_test_tools/rviz/: field_tests.rviz  tank_test.rviz
state_feedback/: CHANGELOG.rst  CMakeLists.txt  package.xml
state_feedback/launch/: state_feedback.launch
state_feedback/src/: tf_listener.cpp
urdf/: sam_auv_base.urdf.xacro
