<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sam_description</name>
  <version>0.1.0</version>
  <description>The sam_description package</description>
  <maintainer email="ozero@kth.se">Ozer Ozkahraman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
