<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sam_msgs</name>
  <version>0.1.0</version>
  <description>The sam_msgs package</description>
  <maintainer email="ozero@kth.se">ozer</maintainer>
  <license>MIT</license>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- Message gen depends -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
