<?xml version="1.0"?>
<package format="2">
  <name>sam_joy_msgs</name>
  <version>0.0.18</version>
  <description>The sam_joy_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mwlock@kth.se">matt</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
